--- a/public/Expt1-getProducts.html
+++ b/public/Expt1-getProducts.html
@@ -131,7 +131,8 @@
             </table>
         </p>
         <h2>Source Code</h2>
-        <div><a href="https://github.com/visha-r/nodeproject/blob/master/app.js" target="_blank">Node.js Source</a></div>
+        <div><a href="https://github.com/visha-r/MongodbNodejs/blob/master/app.js" target="_blank">Server Source</a></div>
+        <div><a href="https://github.com/visha-r/MongodbNodejs/blob/master/public/js/ProductService.js" target="_blank"> Angular Service</a></div>
         <h2>References</h2>
         <div><a href="https://www.youtube.com/watch?v=c-etW7AX9cA" target="_blank"> Youtube Lecture </a></div>
     </div>
