--- a/public/Expt2-addReviews.html
+++ b/public/Expt2-addReviews.html
@@ -71,7 +71,8 @@
             <br />
         </p>
         <h2>Source Code</h2>
-        <div><a href="" target="_blank">Node.js Source</a></div>
+        <div><a href="https://github.com/visha-r/MongodbNodejs/blob/master/app.js" target="_blank">Server Source</a></div>
+        <div><a href="https://github.com/visha-r/MongodbNodejs/blob/master/public/js/ProductService.js" target="_blank"> Angular Service</a></div>
         <h2>References</h2>
         <div><a href="https://www.youtube.com/watch?v=c-etW7AX9cA" target="_blank"> Youtube Lecture </a></div>
     </div>
